--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
     <title>BDSL</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="header__navigation container">
+        <div class="navigation__logo">
+          <a href="#">
+            <img class="logo__img" src="img/BDSL-logo.jpg" alt="BDSL-logo" />
+          </a>
+        </div>
+        <div class="navigation__burger-menu-icon">
+          <span class="burger__line line-top"></span>
+          <span class="burger__line line-middle"></span>
+          <span class="burger__line line-bottom"></span>
+        </div>
+        <div class="navigation__menu">
+          <a class="menu" href="#">ТАНЦІ</a>
+          <a class="menu" href="#">РОЗКЛАД</a>
+          <a class="menu" href="#">ВИКЛАДАЧІ</a>
+          <a class="menu" href="#">НОВИНИ</a>
+          <a class="menu" href="#">КОНТАКТИ</a>
+        </div>
+      </nav>
+    </header>
+    <main class="main-page">
+      <section class="main__title"></section>
+    </main>
+    <footer class="footer">
+      <div class="footer__social-list">
+        <a href="https://t.me/bdslviv/" target="_blank"><i class="bi bi-telegram"></i></a>
+        <a href="https://www.instagram.com/bdslviv/" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/BDSLviv" target="_blank"><i class="bi bi-facebook"></i></a>
+      </div>
+    </footer>
+  </body>
 </html>
