add background img to main-page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav class="header__navigation container">
         <div class="navigation__logo">
           <a href="#">
-            <img class="logo__img" src="img/BDSL-logo.jpg" alt="BDSL-logo" />
+            <img class="logo__img" src="img/BDSL-logo.jpg" alt="BDSL-logo">
           </a>
         </div>
         <div class="navigation__burger-menu-icon">
@@ -34,7 +34,10 @@
       </nav>
     </header>
     <main class="main-page">
-      <section class="main__title"></section>
+      <section class="main__title">
+        <h2 class="title-bdsl">#BDSLviv</h2>
+        <div class="bg"></div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__social-list">
@@ -44,4 +47,8 @@
       </div>
     </footer>
   </body>
-</html>
+  </html>
+  
+  <!-- <img class="title__mobile-foto main-foto" src="img/mobile-main-foto.jpg" alt="Team bdsl">
+  <img class="title__main-foto main-foto" src="img/main-foto.jpg" alt="Team bdsl"> -->
+  <!-- <a href="#" class="modall-btn">ЗАПИСАТИСЯ</a> -->
