--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav class="header__navigation container">
         <div class="navigation__logo">
           <a href="#">
-            <img class="logo__img" src="img/BDSL-logo.jpg" alt="BDSL-logo">
+            <img class="logo__img" src="img/bdsl-logo.jpg" alt="BDSL-logo">
           </a>
         </div>
         <div class="navigation__burger-menu-icon">
