add style to mobile main page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
     <main class="main-page">
       <section class="main__title">
         <h2 class="title-bdsl">#BDSLviv</h2>
-        <div class="bg"></div>
+        <div class="grid-name">
+          <div class="name first-leter">B</div>
+          <div class="name">ACHATA</div>
+          <div class="name first-leter">D</div>
+          <div class="name">ANCE</div>
+          <div class="name first-leter">S</div>
+          <div class="name">CHOOL</div>
+          <div class="name first-leter">L</div>
+          <div class="name">VIV</div>
+        </div>
+        <a href="#" class="modal-btn">ЗАПИСАТИСЯ</a>
       </section>
     </main>
     <footer class="footer">
