add style to schedyle days

--- a/index1.html
+++ b/index1.html
@@ -109,6 +109,12 @@
             <div class="week__schedule">
               <div class="days-of__week">
                 <h2 class="day__week">ПОНЕДІЛОК</h2>
+                <div class="day__week_name">
+                  <h4>ЧАС</h4>
+                  <h4>РІВЕНЬ</h4>
+                  <h4>СТИЛЬ</h4>
+                  <h4>ВИКЛАДАЧ</h4>
+                </div>
                 <div class="day-schadule">
                   <div class="hour__wrapper">
                     <p class="hour__item">20:00 - 21:00</p>
@@ -124,6 +130,12 @@
               </div>
               <div class="days-of__week">
                 <h2 class="day__week">ВІВТОРОК</h2>
+                <div class="day__week_name">
+                  <h4>ЧАС</h4>
+                  <h4>РІВЕНЬ</h4>
+                  <h4>СТИЛЬ</h4>
+                  <h4>ВИКЛАДАЧ</h4>
+                </div>
                 <div class="day-schadule">
                   <div class="hour__wrapper">
                     <p class="hour__item">20:00 - 21:00</p>
@@ -131,6 +143,84 @@
                   <div class="level">B2</div>
                   <div class="dance-teacher">
                     <p class="dance-name">ZOOK</p>
+                  </div>
+                  <div>
+                    <h4 class="teacher__name">Галя&Тарас</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="days-of__week">
+                <h2 class="day__week">СЕРЕДА</h2>
+                <div class="day__week_name">
+                  <h4>ЧАС</h4>
+                  <h4>РІВЕНЬ</h4>
+                  <h4>СТИЛЬ</h4>
+                  <h4>ВИКЛАДАЧ</h4>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">20:00 - 21:00</p>
+                  </div>
+                  <div class="level">B2</div>
+                  <div class="dance-teacher">
+                    <p class="dance-name">BACHATA</p>
+                  </div>
+                  <div>
+                    <h4 class="teacher__name">Галя&Тарас</h4>
+                  </div>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">21:00 - 22:00</p>
+                  </div>
+                  <div class="level">B2</div>
+                  <div class="dance-teacher">
+                    <p class="dance-name">SALSA</p>
+                  </div>
+                  <div>
+                    <h4 class="teacher__name">Галя&Тарас</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="days-of__week">
+                <h2 class="day__week">ЧЕТВЕР</h2>
+                <div class="day__week_name">
+                  <h4>ЧАС</h4>
+                  <h4>РІВЕНЬ</h4>
+                  <h4>СТИЛЬ</h4>
+                  <h4>ВИКЛАДАЧ</h4>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">7:00 - 8:00</p>
+                  </div>
+                  <div class="level">B2</div>
+                  <div class="dance-teacher">
+                    <p class="dance-name">ZOOK</p>
+                  </div>
+                  <div>
+                    <h4 class="teacher__name">Галя&Тарас</h4>
+                  </div>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">20:00 - 21:00</p>
+                  </div>
+                  <div class="level">B2</div>
+                  <div class="dance-teacher">
+                    <p class="dance-name">KIZOMBA</p>
+                  </div>
+                  <div>
+                    <h4 class="teacher__name">Галя&Тарас</h4>
+                  </div>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">21:00 - 22:00</p>
+                  </div>
+                  <div class="level">B1-B2</div>
+                  <div class="dance-teacher">
+                    <p class="dance-name">SALSA</p>
                   </div>
                   <div>
                     <h4 class="teacher__name">Галя&Тарас</h4>
