add actual schedule

--- a/index1.html
+++ b/index1.html
@@ -110,117 +110,191 @@
               <div class="days-of__week">
                 <h2 class="day__week">ПОНЕДІЛОК</h2>
                 <div class="day__week_name">
-                  <h4>ЧАС</h4>
-                  <h4>РІВЕНЬ</h4>
-                  <h4>СТИЛЬ</h4>
-                  <h4>ВИКЛАДАЧ</h4>
+                  <h5>ГОДИНА</h5>
+                  <h5>РІВЕНЬ</h5>
+                  <h5>СТИЛЬ</h5>
+                  <h5 style="margin-left: 15px;">ЗАЛ</h5>
+                  <h5>ВИКЛАДАЧ</h5>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">18:00 - 19:00</p>
+                  </div>
+                  <div class="level">--</div>
+                  <div class="dance-teacher">
+                    <p class="dance-name">BACHATA</p>
+                  </div>
+                  <div class="icon_place">
+                    <div class="icon__place__color pink"></div>
+                  </div>
+                  <div>
+                    <p class="teacher__name">Марина</p>
+                  </div>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">19:00 - 20:00</p>
+                  </div>
+                  <div class="level">A0</div>
+                  <div class="dance-teacher">
+                    <p class="dance-name">BACHATA</p>
+                  </div>
+                  <div class="icon_place">
+                    <div class="icon__place__color grey"></div>
+                  </div>
+                  <div>
+                    <p class="teacher__name">Діма&Оля</p>
+                  </div>
                 </div>
                 <div class="day-schadule">
                   <div class="hour__wrapper">
                     <p class="hour__item">20:00 - 21:00</p>
                   </div>
-                  <div class="level">B2</div>
+                  <div class="level">B1-B2</div>
                   <div class="dance-teacher">
-                    <p class="dance-name">ZOOK</p>
+                    <p class="dance-name">BACHATA</p>
+                  </div>
+                  <div class="icon_place">
+                    <div class="icon__place__color grey"></div>
                   </div>
                   <div>
-                    <h4 class="teacher__name">Галя&Тарас</h4>
+                    <p class="teacher__name">Діма&Оля</p>
                   </div>
                 </div>
               </div>
               <div class="days-of__week">
                 <h2 class="day__week">ВІВТОРОК</h2>
                 <div class="day__week_name">
-                  <h4>ЧАС</h4>
-                  <h4>РІВЕНЬ</h4>
-                  <h4>СТИЛЬ</h4>
-                  <h4>ВИКЛАДАЧ</h4>
+                  <h5>ГОДИНА</h5>
+                  <h5>РІВЕНЬ</h5>
+                  <h5>СТИЛЬ</h5>
+                  <h5>ЗАЛ</h5>
+                  <h5>ВИКЛАДАЧ</h5>
                 </div>
                 <div class="day-schadule">
                   <div class="hour__wrapper">
-                    <p class="hour__item">20:00 - 21:00</p>
+                    <p class="hour__item">18:00 - 19:00</p>
                   </div>
-                  <div class="level">B2</div>
+                  <div class="level">B1</div>
+
                   <div class="dance-teacher">
-                    <p class="dance-name">ZOOK</p>
+                    <p class="dance-name">BACHATA LADIES</p>
+                  </div>
+                  <div class="icon_place">
+                    <div class="icon__place__color purple"></div>
                   </div>
                   <div>
-                    <h4 class="teacher__name">Галя&Тарас</h4>
+                    <p class="teacher__name">Галя</p>
+                  </div>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">19:00 - 20:00</p>
+                  </div>
+                  <div class="level">A2</div>
+
+                  <div class="dance-teacher">
+                    <p class="dance-name">KIZOMBA</p>
+                  </div>
+                  <div class="icon_place">
+                    <div class="icon__place__color pink"></div>
+                  </div>
+                  <div>
+                    <p class="teacher__name">Ігор&Олеся</p>
+                  </div>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">19:00 - 20:00</p>
+                  </div>
+                  <div class="level">B2</div>
+
+                  <div class="dance-teacher">
+                    <p class="dance-name">BACHATA</p>
+                  </div>
+                  <div class="icon_place">
+                    <div class="icon__place__color grey"></div>
+                  </div>
+                  <div>
+                    <p class="teacher__name">Тарас&Галя</p>
                   </div>
                 </div>
               </div>
               <div class="days-of__week">
                 <h2 class="day__week">СЕРЕДА</h2>
                 <div class="day__week_name">
-                  <h4>ЧАС</h4>
-                  <h4>РІВЕНЬ</h4>
-                  <h4>СТИЛЬ</h4>
-                  <h4>ВИКЛАДАЧ</h4>
+                  <h5>ГОДИНА</h5>
+                  <h5>РІВЕНЬ</h5>
+                  <h5>СТИЛЬ</h5>
+                  <h5>ЗАЛ</h5>
+                  <h5>ВИКЛАДАЧ</h5>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">18:00 - 19:00</p>
+                  </div>
+                  <div class="level">--</div>
+                  <div class="dance-teacher">
+                    <p class="dance-name">BACHATA</p>
+                  </div>
+                  <div class="icon_place">
+                    <div class="icon__place__color pink"></div>
+                  </div>
+                  <div>
+                    <p class="teacher__name">Марина</p>
+                  </div>
+                </div>
+                <div class="day-schadule">
+                  <div class="hour__wrapper">
+                    <p class="hour__item">19:00 - 20:00</p>
+                  </div>
+                  <div class="level">A0</div>
+                  <div class="dance-teacher">
+                    <p class="dance-name">BACHATA</p>
+                  </div>
+                  <div class="icon_place">
+                    <div class="icon__place__color grey"></div>
+                  </div>
+                  <div>
+                    <p class="teacher__name">Діма&Оля</p>
+                  </div>
                 </div>
                 <div class="day-schadule">
                   <div class="hour__wrapper">
                     <p class="hour__item">20:00 - 21:00</p>
                   </div>
-                  <div class="level">B2</div>
+                  <div class="level">B1-B2</div>
                   <div class="dance-teacher">
                     <p class="dance-name">BACHATA</p>
                   </div>
-                  <div>
-                    <h4 class="teacher__name">Галя&Тарас</h4>
-                  </div>
-                </div>
-                <div class="day-schadule">
-                  <div class="hour__wrapper">
-                    <p class="hour__item">21:00 - 22:00</p>
-                  </div>
-                  <div class="level">B2</div>
-                  <div class="dance-teacher">
-                    <p class="dance-name">SALSA</p>
+                  <div class="icon_place">
+                    <div class="icon__place__color grey"></div>
                   </div>
                   <div>
-                    <h4 class="teacher__name">Галя&Тарас</h4>
+                    <p class="teacher__name">Діма&Оля</p>
                   </div>
                 </div>
               </div>
               <div class="days-of__week">
                 <h2 class="day__week">ЧЕТВЕР</h2>
                 <div class="day__week_name">
-                  <h4>ЧАС</h4>
-                  <h4>РІВЕНЬ</h4>
-                  <h4>СТИЛЬ</h4>
-                  <h4>ВИКЛАДАЧ</h4>
-                </div>
-                <div class="day-schadule">
-                  <div class="hour__wrapper">
-                    <p class="hour__item">7:00 - 8:00</p>
-                  </div>
-                  <div class="level">B2</div>
-                  <div class="dance-teacher">
-                    <p class="dance-name">ZOOK</p>
-                  </div>
-                  <div>
-                    <h4 class="teacher__name">Галя&Тарас</h4>
-                  </div>
+                  <h5>ЧАС</h5>
+                  <h5>РІВЕНЬ</h5>
+                  <h5>СТИЛЬ</h5>
+                  <h5>ЗАЛ</h5>
+                  <h5>ВИКЛАДАЧ</h5>
                 </div>
                 <div class="day-schadule">
                   <div class="hour__wrapper">
                     <p class="hour__item">20:00 - 21:00</p>
                   </div>
                   <div class="level">B2</div>
+
                   <div class="dance-teacher">
-                    <p class="dance-name">KIZOMBA</p>
+                    <p class="dance-name">ZOOK</p>
                   </div>
-                  <div>
-                    <h4 class="teacher__name">Галя&Тарас</h4>
-                  </div>
-                </div>
-                <div class="day-schadule">
-                  <div class="hour__wrapper">
-                    <p class="hour__item">21:00 - 22:00</p>
-                  </div>
-                  <div class="level">B1-B2</div>
-                  <div class="dance-teacher">
-                    <p class="dance-name">SALSA</p>
+                  <div class="icon_place">
+                    <div class="icon__place__color"></div>
                   </div>
                   <div>
                     <h4 class="teacher__name">Галя&Тарас</h4>
