add margin to location__place

--- a/index1.html
+++ b/index1.html
@@ -113,7 +113,7 @@
                   <h5>ГОДИНА</h5>
                   <h5>РІВЕНЬ</h5>
                   <h5>СТИЛЬ</h5>
-                  <h5 style="margin-left: 15px;">ЗАЛ</h5>
+                  <h5 class="location__place">ЗАЛ</h5>
                   <h5>ВИКЛАДАЧ</h5>
                 </div>
                 <div class="day-schadule">
@@ -168,7 +168,7 @@
                   <h5>ГОДИНА</h5>
                   <h5>РІВЕНЬ</h5>
                   <h5>СТИЛЬ</h5>
-                  <h5>ЗАЛ</h5>
+                  <h5 class="location__place">ЗАЛ</h5>
                   <h5>ВИКЛАДАЧ</h5>
                 </div>
                 <div class="day-schadule">
@@ -226,7 +226,7 @@
                   <h5>ГОДИНА</h5>
                   <h5>РІВЕНЬ</h5>
                   <h5>СТИЛЬ</h5>
-                  <h5>ЗАЛ</h5>
+                  <h5 class="location__place">ЗАЛ</h5>
                   <h5>ВИКЛАДАЧ</h5>
                 </div>
                 <div class="day-schadule">
@@ -281,7 +281,7 @@
                   <h5>ЧАС</h5>
                   <h5>РІВЕНЬ</h5>
                   <h5>СТИЛЬ</h5>
-                  <h5>ЗАЛ</h5>
+                  <h5 class="location__place">ЗАЛ</h5>
                   <h5>ВИКЛАДАЧ</h5>
                 </div>
                 <div class="day-schadule">
