--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                   <span class="dance-select__item">SALSA</span>
                 </li>
               </ul>
-              <ul class="dance-item">
-                <li class="dance__select">
+              <div class="dance-item">
+                <div class="dance__select">
                   <span class="dance-select__item">ВСІ</span>
-                </li>
-              </ul>
+                </div>
+              </в>
             </div>
           </div>
         </div>
@@ -294,13 +294,21 @@
                     <p class="dance-name">ZOOK</p>
                   </div>
                   <div class="icon_place">
-                    <div class="icon__place__color"></div>
+                    <div class="icon__place__color grey"></div>
                   </div>
                   <div class="dance-teacher">
                     <p class="teacher__name">Галя&Тарас</p>
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="wrapper__button isAdmin">
+          <div class="container">
+            <div class="button__add__classes">
+              <span class="dance-select__item">Додати заняття</span>
             </div>
           </div>
         </div>
